# calicity

./: .gitignore  Cargo.toml
calicity/: Cargo.toml
calicity-dialog/: Cargo.toml
calicity-dialog/src/: lib.rs
calicity-knowledge/: Cargo.toml
calicity-knowledge/src/: belief.rs  lib.rs
calicity-world/: Cargo.toml
calicity-world/src/: action.rs  entity.rs  lib.rs
calicity-world/tests/: coffee.rs
calicity/src/: main.rs
calicity/src/dialog/: mod.rs  stranger.rs
calicity/src/ontology/: mod.rs
