[package]
name = "calicity-knowledge"
version = "0.1.0"
authors = ["ocornoc <ocornoc@protonmail.com>"]
edition = "2018"
include = ["src/**/*"]

[dependencies]
firestorm = "0.4.5"
rand = "0.8.3"
ordered-float = "2.1.1"
calicity-world = {version = "0.1", path = "../calicity-world"}

[dev-dependencies]
