[package]
name = "calicity-world"
version = "0.1.0"
authors = ["ocornoc <ocornoc@protonmail.com>"]
edition = "2018"
include = ["src/**/*"]

[dependencies]
rayon = "1.5.0"
chrono = {version = "0.4.19", default-features = false, features = ["std"]}
rand = "0.8.3"
dycovec = "0.1.1"
firestorm = "0.4.5"
